[tool.poetry]
name = "bms-fetcher"
version = "0.1.0"
description = ""
authors = ["Stefan Armbruster <stefan@armbruster-it.de>"]
readme = "README.md"
# package-mode = false   # requires poetry >= 1.8

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
